--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
       </div>
     </div>
     <footer>
-      <p>Front-End School 9기</p>
+      <p>멋쟁이 사자처럼 FrontEnd BootCamp</p>
     </footer>
   </div> 
 
